# backend

./: .rustfmt.toml  Cargo.toml  Makefile  README.md
common/: Cargo.toml
common/src/: lib.rs
common/src/jwt/: mod.rs
common/src/log/: config.rs  error.rs  handler.rs  level.rs  mod.rs
restd/: Cargo.toml
restd/src/: lib.rs  main.rs
restd/src/rest/: config.rs  error.rs  health.rs  metrics.rs  mod.rs
restd/src/rest/middleware/: mod.rs
restd/src/rest/middleware/logger/: mod.rs
restd/src/rest/middleware/request_id/: mod.rs
restd/src/rest/middleware/telemetry/: metrics.rs  mod.rs  records.rs
restd/src/rest/v1/: mod.rs
restd/src/rest/v1/admin/: mod.rs
restd/src/rest/v1/auth/: mod.rs
restd/src/rest/v1/hello/: mod.rs
restd/src/rest/v1/middleware/: mod.rs
restd/src/rest/v1/middleware/auth/: mod.rs
restd/src/rest/v1/model/: error.rs  hello.rs  mod.rs
