[package]
name = "common"
version = "0.1.0"
authors = ["Christian Saide <me@csaide.dev>"]
edition = "2018"

[dependencies]
structopt = "0.3"
slog = { version = "2.5", features = ["nested-values"]}
slog-async = { version = "2.3", features = ["nested-values"] }
slog-json = { version = "2.3", features = ["nested-values"] }
slog_derive = { git = "https://github.com/slog-rs/derive.git" }
serde = { version = "1.0.102", features = ["derive"] }
erased-serde = "0.3"
jsonwebtoken = "6"