[package]
name = "restd"
version = "0.1.0"
authors = ["Christian Saide <me@csaide.dev>"]
edition = "2018"

[dependencies]
common = { path = "../common" }

structopt = "0.3"
actix-web = "1.0"
actix-service = "0.4"
chrono = "0.4"
clap = "~2.33.0"
futures = "0.1"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0"
slog = "2.5"
slog_derive = { git = "https://github.com/slog-rs/derive.git" }
erased-serde = "0.3"
prometheus = "0.7"
lazy_static = "1.1"